Development Portal (2023-06-21 shi)
==============================
Remove period-percent check for SAVi


Development Portal (2023-03-20 shi)
==============================
Display narratives for tag element of non-embedded codelist if found


Development Portal (2022-03-23 shi)
==============================
Display all narratives for result comments in SAVi
Display all narratives for transaction columns in SAVi
Display all narratives for owner-org in SAVi
Display all narratives for contact-info in SAVi
Display all narratives for Organisation name in SAVi
Update css for new narratives
Update print-friendly theme for SAVi
Minor css fixes


Development Portal (2022-03-22 shi)
==============================
Update Freetext glossary in search
Update view_search glossary chunk now in general
Display all narratives for result titles & indicator descriptions
Fix result comments to only show when available
Fix result percent dot background color when @percent is 0
Update print-friendly theme for SAVi


Development Portal (2022-03-10 shi)
==============================
Update search input font size


Development Portal (2022-02-01 shi)
==============================
Add validator links to SAVi and Org file


Development Portal (2021-12-22 shi)
==============================
Change SAVi urls 


Development Portal (2021-12-07 shi)
==============================
Add sector vocab 12 to SAVi
Fix period column font size for results
Display sector vocab code


Development Portal (2021-12-02 shi)
==============================
Update pid url for SAVi org files


Development Portal (2021-11-23 shi)
==============================
Fix typo for id links in participating-org SAVi


Development Portal (2021-11-14 shi)
==============================
Fix budget end date column width in SAVi
Fix Dash snapshots table text wrapping


Development Portal (2021-09-24 shi)
==============================
Update print-friendly css
Remove sorting for result tables

