@@ -54,7 +54,7 @@ td.options form			{display:inline-block;}
 
 /*	Status badge next to d-portal logo in headers
 	============================================= */
-span.badge				{display:inline-block; vertical-align:bottom; color:#000; padding:5px 10px; border-radius:4px; font-weight:bold; font-size:0.8em; margin-left:10px;}
+span.badge				{display:none; vertical-align:bottom; color:#000; padding:5px 10px; border-radius:4px; font-weight:bold; font-size:0.8em; margin-left:10px;}
 span.badge.beta			{border:1px solid #000;}
 
 
