@@ -565,6 +565,9 @@ please contact them here.
 #footer23_text
 Dquery - A read-only SQL interface
 
+#footer24_text
+d-preview - Preview your data
+
 #read_more_text
 About data quality and why it matters
 
