@@ -562,6 +562,9 @@ veuillez les contacter ici.
 #footer23_text
 Dquery - Une interface SQL en lecture seule
 
+#footer24_text
+d-preview - Prévisualisez vos données
+
 #read_more_text
 Lire la suite
 
