@@ -138,7 +138,6 @@ This test instance of d-portal number <span class="beige_key">{beige_instance_ke
 #large_footer_left
 <div class="footer_motto">{footer6_text} {footer7_text}</div>
 <p>{footer8_text}</p>
-<p class="beta">{footer9_text}</p>
 <p>{footer21_text} <b><a href="https://www.iatiregistry.org/publisher/{publisher_slug}">{footer22_text}</a></b></p>
 <p>{footer10_text} <b><a href="mailto:support@iatistandard.org?subject=Regarding%20d-portal.org">{footer11_text}</a></b></p>
 
@@ -150,6 +149,7 @@ This test instance of d-portal number <span class="beige_key">{beige_instance_ke
 	<li><a href="/ctrack.html#view=generator">{footer15_text}</a></li>
 	<li><a href="{origin}/dquery">{footer23_text}</a></li>
 	<li><a href="https://xriss.github.io/D-Portal-Logs/">{footer20_text}</a></li>
+	<li><a href="http://d-preview.codeforiati.org">{footer24_text}</a></li>
 </ul>
 <div class="footer_header">{footer16_text}</div>
 <ul>
