@@ -559,6 +559,9 @@ Github प्रतिक्रिया फोरम
 #footer23_text
 Dquery - केवल SQL इंटरफ़ेस पढ़ा जाता है
 
+#footer24_text
+d-preview - अपने डेटा का पूर्वावलोकन करें
+
 #read_more_text
 और अधिक पढ़ें
 
