@@ -562,6 +562,9 @@ Githubのフィードバックフォーラム
 #footer23_text
 Dquery-読み取り専用SQLインターフェース
 
+#footer24_text
+d-preview - データをプレビューする
+
 #read_more_text
 続きを読む
 
