@@ -557,7 +557,10 @@ Si tiene alguna consulta relacionada con los datos, que es propiedad del editor,
 por favor contáctalos aquí.
 
 #footer23_text
-Dquery: una interfaz SQL de solo lectura
+Dquery - Una interfaz SQL de solo lectura
+
+#footer24_text
+d-preview - Vista previa de sus datos
 
 #read_more_text
 Leer más
