@@ -1,3 +1,10 @@
+Development Portal (2023-07-27 shi)
+==============================
+Update BETA status
+Update print-friendly css for beta badge
+Add d-preview link to footer
+
+
 Development Portal (2023-06-21 shi)
 ==============================
 Remove period-percent check for SAVi
